# sylpheed-autoforward

./: .gitignore  .gitmodules  .travis.yml  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README.ja.txt  README.md  appveyor.yml  autoforward.c  autoforwardrc  build.sh  configure.ac  testui.c  version.rc
po/: autoforward.pot  ja.po
res/: offline.xpm  online.xpm  version.rc  version.rc.in
src/: Makefile.am  autoforward.c  autoforward.h  testui.c
